[package]
name = "rust-addon"
version = "0.1.0"
authors = ["libo <370157506@qq.com>"]
description = "Rust2WebAssembly"
repository = "https://github.com/l3ve/rust-addon.git"
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
nodejs-sys = "0.13.0"
wasm-bindgen = "0.2.73"
web-sys = { version = "0.3.50", features = [
  "console",
  "Window",
  "Document",
  "HtmlElement",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d"
  ]}

[profile.release]
lto = true